Add home content

--- a/FIT5032_MyFirstWebApplication/Views/Home/Index.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Home/Index.cshtml
@@ -3,31 +3,314 @@
 }
 
 <main>
-    <section class="row" aria-labelledby="aspnetTitle">
-        <h1 id="title">ASP.NET</h1>
-        <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-        <p><a href="https://asp.net" class="btn btn-primary btn-md">Learn more &raquo;</a></p>
+    <section class="w3l-hero-headers-9" id="home">
+        <div class="slide header11" data-selector="header11">
+            <div class="container">
+                <div class="banner-text ">
+                    <h5 class=" ">Present Education<br> in beautiful way!</h5>
+                    <p class=" ">Adipi sicing elit. Quia, aliquid voluptatum corporis Dicta. Deleniti possimus culpa nemo asperiores aperiam mollitia, maiores Lorem ipsum dolor.</p>
+                    <div>
+                        <form class="form-inline forms-gds" action="#" method="post">
+                            <input type="email" name="" placeholder="Email" required="">
+                            <button class="btn btn-style btn-primary">Subscribe</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <div class="row">
-        <section class="col-md-4" aria-labelledby="gettingStartedTitle">
-            <h2 id="gettingStartedTitle">Getting started</h2>
-            <p>
-                ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                enables a clean separation of concerns and gives you full control over markup
-                for enjoyable, agile development.
-            </p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="librariesTitle">
-            <h2 id="librariesTitle">Get more libraries</h2>
-            <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-        </section>
-        <section class="col-md-4" aria-labelledby="hostingTitle">
-            <h2 id="hostingTitle">Web Hosting</h2>
-            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-            <p><a class="btn btn-outline-dark" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-        </section>
-    </div>
+    <section class="w3l-call-to-action_9">
+        <div class="call-w3">
+            <div class="container">
+                <div class="booking-form-content">
+                    <div class="main-titles-head ">
+                        <h3 class="header-name">
+                            You Can learn anything
+                        </h3>
+                        <p class="tiltle-para editContent ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic fuga sit illo modi aut aspernatur tempore laboriosam saepe dolores eveniet.</p>
+                    </div>
+                    <div class="row text-center">
+                        <div class="col-lg-4 col-md-6 propClone about-line-top ">
+                            <div class="area-box color-white editContent box-active">
+                                <div class="icon-back"><span class="fa fa-thumbs-up"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Unlimited Access
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 propClone about-line-top ">
+                            <div class="area-box color-white editContent">
+                                <div class="icon-back"><span class="fa fa-users"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Expert Teachers
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 propClone about-line-top">
+                            <div class="area-box color-white editContent box-active">
+                                <div class="icon-back"><span class="fa fa-pencil"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Learn Anything
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 propClone about-line-top ">
+                            <div class="area-box color-white editContent">
+                                <div class="icon-back"><span class="fa fa-book"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Many Courses
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 propClone about-line-top ">
+                            <div class="area-box color-white editContent box-active">
+                                <div class="icon-back"><span class="fa fa-star"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Bright Future
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 propClone about-line-top ">
+                            <div class="area-box color-white editContent">
+                                <div class="icon-back"><span class="fa fa-check"></span></div>
+
+                                <h5>
+                                    <a href="blog.html" class="editContent">
+                                        Verified Course
+                                    </a>
+                                </h5>
+                                <p class="para editContent">
+                                    Sit amet consect etur adipi sicing elit. Rem quib usdam corporis, dolores
+                                    quos, nobis culpa est
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="w3l-specification-6">
+        <div class="specification-layout editContent">
+            <div class="container">
+                <div class="grid">
+                    <figure class="effect-apollo ser-bg1">
+                        <figcaption>
+                            <h5><a href="#url">Successfully Trained</a></h5>
+                            <p class="para">Lorem ipsum dolor sit amet.Sit amet consect etur adipi sicing elit.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-apollo ser-bg2">
+                        <figcaption>
+                            <h5><a href="#url">We Proudly Received</a></h5>
+                            <p class="para">Lorem ipsum dolor sit amet.Sit amet consect etur adipi sicing elit.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-apollo ser-bg3">
+                        <figcaption>
+                            <h5><a href="#url">We Are Getting Featured On</a></h5>
+                            <p class="para">Lorem ipsum dolor sit amet.Sit amet consect etur adipi sicing elit.</p>
+                        </figcaption>
+                    </figure>
+                    <figure class="effect-apollo ser-bg4">
+                        <figcaption>
+                            <h5><a href="#url">Firmly Established</a></h5>
+                            <p class="para">Lorem ipsum dolor sit amet.Sit amet consect etur adipi sicing elit.</p>
+                        </figcaption>
+                    </figure>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="w3l-covers-18">
+        <div class="covers-main editContent">
+            <div class="container">
+                <div class="main-titles-head ">
+                    <h3 class="header-name">
+                        Browse our top courses
+                    </h3>
+                    <p class="tiltle-para editContent ">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Hic fuga sit illo modi aut aspernatur tempore laboriosam saepe dolores eveniet.</p>
+                </div>
+                <div class="gallery-image row">
+                    <div class="col-lg-4 col-md-6">
+                        <img src="~/images/b2.jpg" alt="product" class="img-responsive ">
+                        <div class="img-box">
+                            <h5 class="mb-2"><a href="about.html">Branding Design</a></h5>
+                            <div class="blog-date">
+                                <p class="pos-date"><span class="fa fa-calendar mr-1"></span>7 April</p> <p class="pos-date"><span class="fa fa-eye mr-1"></span> 3286 Views</p>
+                            </div>
+                            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque labor.</p>
+                        </div>
+                    </div>
+                    <div class=" col-lg-4 col-md-6 top-top2">
+                        <img src="~/images/b1.jpg" alt="product" class="img-responsive ">
+                        <div class="img-box">
+                            <h5 class="mb-2"><a href="about.html">Art Design</a></h5>
+                            <div class="blog-date">
+                                <p class="pos-date"><span class="fa fa-calendar mr-1"></span>7 April</p> <p class="pos-date"><span class="fa fa-eye mr-1"></span> 3286 Views</p>
+                            </div>
+                            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque labor.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 top-top">
+                        <img src="~/images/b3.jpg" alt="product" class="img-responsive ">
+                        <div class="img-box">
+                            <h5 class="mb-2"><a href="about.html">Programming</a></h5>
+                            <div class="blog-date">
+                                <p class="pos-date"><span class="fa fa-calendar mr-1"></span>7 April</p> <p class="pos-date"><span class="fa fa-eye mr-1"></span> 3286 Views</p>
+                            </div>
+                            <p class="para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet itaque labor.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+    <section class="w3l-teams-15">
+        <div class="team-single-main editContent">
+            <div class="container">
+
+                <div class="row">
+                    <div class="column2 col-lg-6">
+
+                        <img src="~/images/b6.jpg" alt="product" class="img-responsive ">
+                    </div>
+                    <div class="nature-row  coloum4 col-lg-6 align-self">
+                        <h6 class="small-title">HOW WE WORK</h6>
+                        <h3>Your bright future is our mission!. </h3>
+                        <p class="para editContent text ">
+                            Moll itia placeat modi expl icabo volup tatum corporis unde Dicta, provident
+                            Rem adipisci Moll itia placeat modi volup tatem tenetur conse quatur.Conseq tenetur conse quatur adipi sicing elit.
+                        </p>
+                        <a href="about.html" class="action-button btn mt-lg-5 mt-4">Read more</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+    </section>
+
+    <section class="w3l-clients" id="client">
+        <div class="call-w3">
+            <div class="container">
+                <!-- main-slider -->
+                <div class="main-slider text-center">
+                    <div class="csslider infinity" id="slider1">
+                        <input type="radio" name="slide" checked="checked" id="slides_1">
+                        <input type="radio" name="slide" id="slides_2">
+                        <input type="radio" name="slide" id="slides_3">
+                        <ul>
+                            <li>
+                                <div class="slider-info">
+                                    <div class="d-grid hh14-text">
+                                        <img class="img-responsive" src="~/images/c3.jpg" alt="image">
+                                        <div class="hh14-info">
+                                            <h6>Limitless learning</h6>
+                                            <p class="para">
+                                                Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
+                                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim.
+                                            </p>
+                                            <h4>Jack Willson</h4>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
+
+                            <li>
+                                <div class="slider-info">
+                                    <div class="d-grid hh14-text">
+                                        <img class="img-responsive" src="~/images/c1.jpg" alt="image">
+                                        <div class="hh14-info">
+                                            <h6>World's best courses</h6>
+                                            <p class="para">
+                                                Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
+                                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim.
+                                            </p>
+                                            <h4>Nike samson</h4>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
+                            <li>
+                                <div class="slider-info">
+                                    <div class="d-grid hh14-text">
+                                        <img class="img-responsive" src="~/images/c2.jpg" alt="image">
+                                        <div class="hh14-info">
+                                            <h6>Popular Courses</h6>
+                                            <p class="para">
+                                                Consectetur adipisicing Lorem ipsum dolor sit amet,elit, sed do
+                                                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim incididunt ut labore et dolore magna aliqua. Ut enim ad
+                                                minim.
+                                            </p>
+                                            <h4>Milky Deo</h4>
+                                        </div>
+
+                                    </div>
+                                </div>
+                            </li>
+                        </ul>
+                        <!-- <div class="arrows">
+                            <label for="slides_1"></label>
+                            <label for="slides_2"></label>
+                            <label for="slides_3"></label>
+                            <label for="slides_4"></label>
+                        </div> -->
+                        <div class="navigation">
+                            <div>
+                                <label for="slides_1"></label>
+                                <label for="slides_2"></label>
+                                <label for="slides_3"></label>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /main-slider -->
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
