--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -3,36 +3,210 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    @*<title>@ViewBag.Title - My ASP.NET Application</title>
     @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/modernizr")*@
+    <link href="~/css/style-starter.css" rel="stylesheet" />
+    <a href="~/fonts/fontawesome-webfont.eot"></a>
+    <a href="~/fonts/fontawesome-webfont.ttf"></a>
+    <a href="~/fonts/fontawesome-webfont.woff"></a>
+    <a href="~/fonts/fontawesome-webfont.woff2"></a>
+    <a href="~/fonts/FontAwesome.otf"></a>
+    <script src="~/js/all.js"></script>
+    <script src="~/js/app.js"></script>
+    <script src="~/js/bootstrap.min.js"></script>
+    <script src="~/js/jquery-3.3.1.min.js"></script>
+    <script src="~/js/owl.carousel.js"></script>
+    <script src="~/js/particles.min.js.js"></script>
+    <script src="~/js/popper.min.js"></script>
+    <script src="~/js/script.js"></script>
+
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark bg-dark">
+    <!--header-->
+    <header id="site-header">
         <div class="container">
-            @Html.ActionLink("Application name", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" title="Toggle navigation" aria-controls="navbarSupportedContent"
-                    aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between">
-                <ul class="navbar-nav flex-grow-1">
-                    <li>@Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                    <li>@Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "nav-link" })</li>
-                </ul>
-                 @Html.Partial("_LoginPartial")
-            </div>
+            <nav class="navbar navbar-expand-lg navbar-dark stroke">
+                <h1>
+                    @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    <a class="navbar-brand" href="index.html">
+                        <span class="fa fa-book"></span> Tutee
+                    </a>
+                </h1>
+                <!-- if logo is image enable this
+                <a class="navbar-brand" href="#index.html">
+                    <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+                </a> -->
+                <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
+                    <span class="navbar-toggler-icon fa icon-close fa-times"></span>
+
+                </button>
+
+                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item">
+                            @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })
+                        </li>
+                        <li class="nav-item mr-2">
+                            @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "btn btn-primary register d-lg-block btn-style" })
+                        </li>
+                    </ul>
+                </div>
+                <!-- toggle switch for light and dark theme -->
+                <div class="mobile-position">
+                    <label class="theme-selector">
+                        <input type="checkbox" id="themeToggle">
+                        <i class="gg-sun"></i>
+                        <i class="gg-moon"></i>
+                    </label>
+                </div>
+                <!-- //toggle switch for light and dark theme -->
+            </nav>
         </div>
-    </nav>
+    </header>
+    <!--/header-->
+    <!--/MENU-JS-->
+    <script>
+        $(window).on("scroll", function () {
+            var scroll = $(window).scrollTop();
+
+            if (scroll >= 80) {
+                $("#site-header").addClass("nav-fixed");
+            } else {
+                $("#site-header").removeClass("nav-fixed");
+            }
+        });
+
+        //Main navigation Active Class Add Remove
+        $(".navbar-toggler").on("click", function () {
+            $("header").toggleClass("active");
+        });
+        $(document).on("ready", function () {
+            if ($(window).width() > 991) {
+                $("header").removeClass("active");
+            }
+            $(window).on("resize", function () {
+                if ($(window).width() > 991) {
+                    $("header").removeClass("active");
+                }
+            });
+        });
+    </script>
+    <!--//MENU-JS-->
+    <!-- disable body scroll which navbar is in active -->
+    <script>
+        $(function () {
+            $('.navbar-toggler').click(function () {
+                $('body').toggleClass('noscroll');
+            })
+        });
+    </script>
+    <!-- disable body scroll which navbar is in active -->
+
     <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <section class="w3l-footer-29-main">
+                <div class="footer-29 py-5 ">
+                    <div class="container">
+                        <div class="grid-col-4 footer-top-29">
+                            <div class="footer-list-29 footer-1">
+                                <h2 class="footer-title-29">About Us</h2>
+                                <p class="para">Ipsum dolor sit amet, consectetur adipisicing elit. Itaque quis repellendus nesciunt quam cupiditate explicabo modi non error consequatur sunt molestiae laboriosam adipisci voluptatem possimus</p>
+                                <div class="main-social-footer-29">
+                                    <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
+                                    <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+                                    <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
+                                    <a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
+                                    <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                                </div>
+                            </div>
+                            <div class="footer-list-29 footer-2">
+                                <ul>
+                                    <h6 class="footer-title-29">Latest News</h6>
+                                    <li>
+                                        <a href="#pages">Programming language</a>
+                                        <h5><a href="#pages">by Admin</a></h5>
+                                    </li>
+                                    <li><a href="#pages">Graduate Admissions</a><h5><a href="#pages">by Admin</a></h5></li>
+                                    <li><a href="#pages">Committed to educating</a><h5><a href="#pages">by Admin</a></h5></li>
+                                </ul>
+                            </div>
+                            <div class="footer-list-29 footer-3">
+                                <div class="properties">
+                                    <h6 class="footer-title-29">Contact Us</h6>
+
+                                    <ul>
+                                        <li>
+                                            <p>
+                                                <span class="fa fa-map-marker"></span>California, #32841 block,
+                                                #221DRS 75 West Rock,
+                                                Maple Building, UK.
+                                            </p>
+                                        </li>
+                                        <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+                                        <li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> example@mail.com</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                            <div class="footer-list-29 footer-4">
+                                <ul>
+                                    <h6 class="footer-title-29">Useful Links</h6>
+                                    <li><a href="#url">Forums</a></li>
+                                    <li><a href="#url">Our Teachers</a></li>
+                                    <li><a href="#url">Upcoming Events</a></li>
+                                    <li><a href="#url">Popular Courses</a></li>
+                                    <li><a href="#url">Verified Course</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class=" bottom-copies row">
+                            <p class="copy-footer-29 col-lg-8">© 2020 Tutee. All rights reserved | Designed by <a href="//w3layouts.com">W3layouts</a></p>
+                            <ul class="list-btm-29 col-lg-4">
+                                <li><a href="#link">Privacy policy</a></li>
+                                <li><a href="#link">Terms of service</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
         </footer>
     </div>
+
+    <!-- move top -->
+    <button onclick="topFunction()" id="movetop" title="Go to top">
+        <span class="fa fa-level-up"></span>
+    </button>
+    <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function () {
+            scrollFunction()
+        };
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("movetop").style.display = "block";
+            } else {
+                document.getElementById("movetop").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+    <!-- /move top -->
 
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
