--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -1,17 +1,19 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     @*<title>@ViewBag.Title - My ASP.NET Application</title>
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")*@
+        @Styles.Render("~/Content/css")
+        @Scripts.Render("~/bundles/modernizr")*@
     <link href="~/css/style-starter.css" rel="stylesheet" />
-    <a href="~/fonts/fontawesome-webfont.eot"></a>
-    <a href="~/fonts/fontawesome-webfont.ttf"></a>
-    <a href="~/fonts/fontawesome-webfont.woff"></a>
-    <a href="~/fonts/fontawesome-webfont.woff2"></a>
-    <a href="~/fonts/FontAwesome.otf"></a>
+    <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link href="//fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <a href="~/fonts/fontawesome-webfont.eot"  rel="stylesheet"></a>
+    <a href="~/fonts/fontawesome-webfont.ttf" rel="stylesheet"></a>
+    <a href="~/fonts/fontawesome-webfont.woff" rel="stylesheet"></a>
+    <a href="~/fonts/fontawesome-webfont.woff2" rel="stylesheet"></a>
+    <a href="~/fonts/FontAwesome.otf" rel="stylesheet"></a>
     <script src="~/js/all.js"></script>
     <script src="~/js/app.js"></script>
     <script src="~/js/bootstrap.min.js"></script>
@@ -21,58 +23,61 @@
     <script src="~/js/popper.min.js"></script>
     <script src="~/js/script.js"></script>
 
-
 </head>
 <body>
-    <!--header-->
-    <header id="site-header">
-        <div class="container">
-            <nav class="navbar navbar-expand-lg navbar-dark stroke">
-                <h1>
-                    @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-                    <a class="navbar-brand" href="index.html">
-                        <span class="fa fa-book"></span> Tutee
-                    </a>
-                </h1>
-                <!-- if logo is image enable this
-                <a class="navbar-brand" href="#index.html">
-                    <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
-                </a> -->
-                <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
-                    <span class="navbar-toggler-icon fa icon-close fa-times"></span>
+    <section class=" w3l-header-4">
+        <!--header-->
+        <header id="site-header">
+            <div class="container">
+                <nav class="navbar navbar-expand-lg navbar-dark stroke">
+                    <h1>
+                        <a class="navbar-brand" href="index.html">
+                            <span class="fa fa-book"></span>
+                        </a>
+                        @Html.ActionLink("Tutee", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                    </h1>
+                    <!-- if logo is image enable this
+                    <a class="navbar-brand" href="#index.html">
+                        <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
+                    </a> -->
+                    <button class="navbar-toggler  collapsed bg-gradient" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon fa icon-expand fa-bars"></span>
+                        <span class="navbar-toggler-icon fa icon-close fa-times"></span>
 
-                </button>
+                    </button>
 
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
-                        </li>
-                        <li class="nav-item">
-                            @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })
-                        </li>
-                        <li class="nav-item mr-2">
-                            @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "btn btn-primary register d-lg-block btn-style" })
-                        </li>
-                    </ul>
-                </div>
-                <!-- toggle switch for light and dark theme -->
-                <div class="mobile-position">
-                    <label class="theme-selector">
-                        <input type="checkbox" id="themeToggle">
-                        <i class="gg-sun"></i>
-                        <i class="gg-moon"></i>
-                    </label>
-                </div>
-                <!-- //toggle switch for light and dark theme -->
-            </nav>
-        </div>
-    </header>
-    <!--/header-->
+                    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+                        <ul class="navbar-nav ml-auto">
+                            <li class="nav-item active">
+                                @Html.ActionLink("Home", "Index", "Home", new { area = "" }, new { @class = "nav-link" })
+                                <span class="sr-only">(current)</span>
+                            </li>
+                            <li class="nav-item">
+                                @Html.ActionLink("Service", "Service", "Home", new { area = "" }, new { @class = "nav-link" })
+                            </li>
+                            <li class="nav-item">
+                                @Html.ActionLink("About", "About", "Home", new { area = "" }, new { @class = "nav-link" })
+                            </li>
+                            <li class="nav-item mr-2">
+                                @Html.ActionLink("Contact", "Contact", "Home", new { area = "" }, new { @class = "btn btn-primary register d-lg-block btn-style" })
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- toggle switch for light and dark theme -->
+                    <div class="mobile-position">
+                        <label class="theme-selector">
+                            <input type="checkbox" id="themeToggle">
+                            <i class="gg-sun"></i>
+                            <i class="gg-moon"></i>
+                        </label>
+                    </div>
+                    <!-- //toggle switch for light and dark theme -->
+                </nav>
+            </div>
+        </header>
+        <!--/header-->
+    </section>
+
     <!--/MENU-JS-->
     <script>
         $(window).on("scroll", function () {
@@ -101,6 +106,7 @@
         });
     </script>
     <!--//MENU-JS-->
+
     <!-- disable body scroll which navbar is in active -->
     <script>
         $(function () {
@@ -111,7 +117,49 @@
     </script>
     <!-- disable body scroll which navbar is in active -->
 
-    <div class="container body-content">
+    <!--theme switcher dark and light mode script-->
+    <script>
+        const bodyElement = document.querySelector('body');
+        const themeToggle = document.querySelector('#themeToggle');
+        const darkModeMql = window.matchMedia('(prefers-color-scheme: dark)');
+
+        const currentTheme = localStorage.getItem('theme') ? localStorage.getItem('theme') : userPreference(darkModeMql);
+
+        if (currentTheme) {
+            bodyElement.classList.add(currentTheme);
+
+            if (currentTheme === 'dark') {
+                themeToggle.checked = true;
+            }
+        }
+
+        function userPreference(e) {
+            if (e.matches) {
+                bodyElement.classList.add("dark");
+                return "dark"
+            } else {
+                bodyElement.classList.remove("dark");
+                return ""
+            }
+        }
+
+        darkModeMql.addListener(userPreference);
+
+        function themeSwitcher(e) {
+            if (e.target.checked) {
+                bodyElement.classList.add('dark');
+                localStorage.setItem('theme', 'dark');
+            } else {
+                bodyElement.classList.remove('dark');
+                localStorage.setItem('theme', '');
+            }
+        }
+
+        themeToggle.addEventListener('change', themeSwitcher);
+    </script>
+    <!--theme switcher dark and light mode script//-->
+
+    <div>
         @RenderBody()
         <hr />
         <footer>
@@ -208,8 +256,8 @@
     </script>
     <!-- /move top -->
 
-    @Scripts.Render("~/bundles/jquery")
+    @*@Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+    @RenderSection("scripts", required: false)*@
 </body>
 </html>
