About and Service Front End

--- a/FIT5032_MyFirstWebApplication/Views/Home/Contact.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Home/Contact.cshtml
@@ -1,19 +1,142 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<main aria-labelledby="title">
-    <h2 id="title">@ViewBag.Title.</h2>
-    <h3>@ViewBag.Message</h3>
+<main>
+    <!-- breadcrumbs -->
+    <section class="w3l-inner-banner-main">
+        <div class="about-inner blog-single editContent">
+            <div class="container">
+                <div class="breadcrumbs-sub">
+                    <ul class="breadcrumbs-custom-path">
+                        <li class="right-side propClone"><a href="index.html" class="editContent">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a> <p></li>
+                        <li class="active editContent">
+                            Contact
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- breadcrumbs //-->
+    <section class="w3l-contact-info-main" id="contact">
+        <div class="contact-sec	editContent">
+            <div class="container">
 
-    <address>
-        One Microsoft Way<br />
-        Redmond, WA 98052-6399<br />
-        <abbr title="Phone">P:</abbr>
-        425.555.0100
-    </address>
 
-    <address>
-        <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-        <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-    </address>
+                <div class="d-grid contact-view">
+
+                    <div class="cont-details ">
+                        <h3 class="sub-title">Get in touch</h3>
+                        <p class="para mt-3 mb-4">Consectetur adipisicing elit.Lorem ipsum dolor sit amet Dignissimos commodi laborum.</p>
+
+                        <div class="cont-top ">
+                            <h6 class="mt-4 cont-left">Address:</h6>
+                            <div class="cont-right">
+                                <p class="para mt-1">
+                                    California, #32841 block,
+                                    #221DRS 75<br> West Rock,
+                                    Maple Building, UK.
+                                </p>
+                            </div>
+                        </div><div class="cont-top margin-up">
+                            <h6 class="mt-4 cont-left">Contact:</h6>
+                            <div class="cont-right">
+                                <p class="para mt-1"><a href="tel:+44 99 555 42">+123 45 67 89</a></p>
+                                <p class="para"><a href="tel:+111 45 67 99">+111 45 67 99</a></p>
+                            </div>
+                        </div>
+                        <div class="cont-top margin-up">
+                            <h6 class="mt-4 cont-left">Email:</h6>
+                            <div class="cont-right">
+                                <p class="para mt-1"><a href="mailto:example@mail.com" class="mail">example@mail.com</a></p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="map-content-9 pl-lg-5 ">
+                        <form action="//sendmail.w3layouts.com/submitForm" method="post">
+                            <div class="twice-two">
+                                <input type="text" class="form-control" name="w3lName" id="w3lName" placeholder="Name" required="">
+                                <input type="email" class="form-control" name="w3lSender" id="w3lSender" placeholder="Email" required="">
+                                <input type="text" class="form-control" name="w3lSubject" id="w3lSubject" placeholder="Subject" required="">
+                            </div>
+                            <textarea name="w3lMessage" class="form-control" id="w3lMessage" placeholder="Message" required=""></textarea>
+
+                            <div class="text-right">
+                                <button type="submit" class="btn btn-contact">Send Message</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+
+                <div class="map-iframe mt-lg-5 mt-md-5 mt-sm-5 mt-4 pt-lg-2">
+                    <iframe src="//www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d317718.69319292053!2d-0.3817765050863085!3d51.528307984912544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8a00baf21de75%3A0x52963a5addd52a99!2sLondon%2C+UK!5e0!3m2!1sen!2spl!4v1562654563739!5m2!1sen!2spl" width="100%" height="300" frameborder="0" style="border: 0px; pointer-events: none;" allowfullscreen=""></iframe>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="w3l-footer-29-main">
+        <div class="footer-29 py-5 ">
+            <div class="container">
+                <div class="grid-col-4 footer-top-29">
+                    <div class="footer-list-29 footer-1">
+                        <h2 class="footer-title-29">About Us</h2>
+                        <p class="para">Ipsum dolor sit amet, consectetur adipisicing elit. Itaque quis repellendus nesciunt quam cupiditate explicabo modi non error consequatur sunt molestiae laboriosam adipisci voluptatem possimus</p>
+                        <div class="main-social-footer-29">
+                            <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
+                            <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+                            <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
+                            <a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
+                            <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                        </div>
+                    </div>
+                    <div class="footer-list-29 footer-2">
+                        <ul>
+                            <h6 class="footer-title-29">Latest News</h6>
+                            <li>
+                                <a href="#pages">Programming language</a>
+                                <h5><a href="#pages">by Admin</a></h5>
+                            </li>
+                            <li><a href="#pages">Graduate Admissions</a><h5><a href="#pages">by Admin</a></h5></li>
+                            <li><a href="#pages">Committed to educating</a><h5><a href="#pages">by Admin</a></h5></li>
+                        </ul>
+                    </div>
+                    <div class="footer-list-29 footer-3">
+                        <div class="properties">
+                            <h6 class="footer-title-29">Contact Us</h6>
+
+                            <ul>
+                                <li>
+                                    <p>
+                                        <span class="fa fa-map-marker"></span>California, #32841 block,
+                                        #221DRS 75 West Rock,
+                                        Maple Building, UK.
+                                    </p>
+                                </li>
+                                <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+                                <li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> example@mail.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-list-29 footer-4">
+                        <ul>
+                            <h6 class="footer-title-29">Useful Links</h6>
+                            <li><a href="#url">Forums</a></li>
+                            <li><a href="#url">Our Teachers</a></li>
+                            <li><a href="#url">Upcoming Events</a></li>
+                            <li><a href="#url">Popular Courses</a></li>
+                            <li><a href="#url">Verified Course</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class=" bottom-copies row">
+                    <p class="copy-footer-29 col-lg-8">© 2020 Tutee. All rights reserved | Designed by <a href="//w3layouts.com">W3layouts</a></p>
+                    <ul class="list-btm-29 col-lg-4">
+                        <li><a href="#link">Privacy policy</a></li>
+                        <li><a href="#link">Terms of service</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
 </main>
