--- a/FIT5032_MyFirstWebApplication/Views/Home/Service.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Home/Service.cshtml
@@ -6,4 +6,206 @@
     ViewBag.Title = "Service";
 }
 
+<main>
+    <!-- breadcrumbs -->
+    <section class="w3l-inner-banner-main">
+        <div class="about-inner services editContent">
+            <div class="container">
 
+                <div class="breadcrumbs-sub">
+                    <ul class="breadcrumbs-custom-path">
+                        <li class="right-side propClone"><a href="index.html" class="editContent">Home <span class="fa fa-angle-right" aria-hidden="true"></span></a> <p></li>
+                        <li class="active editContent">Services</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- breadcrumbs //-->
+    <section class="w3l-recent-work-hobbies" id="services">
+        <div class="recent-work editContent">
+            <div class="container">
+                <div class="row service-service text-center">
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"><span class="fa fa-users"></span></div>
+
+                            <h5>
+                                <a href="#url" class="editContent">
+                                    best Teachers
+                                </a>
+                            </h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"><span class="fa fa-book"></span></div>
+
+                            <h5><a href="#url" class="editContent">Book library</a></h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"> <span class="fa fa-laptop"></span></div>
+
+                            <h5><a href="#url" class="editContent">Online Courses</a></h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"> <span class="fa fa-pencil-square-o"></span></div>
+
+                            <h5>
+                                <a href="#url" class="editContent">
+                                    Best Certificate
+                                </a>
+                            </h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"> <span class="fa fa-smile-o"></span></div>
+
+                            <h5><a href="#url" class="editContent">Best Discount</a></h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 col-sm-6 propClone about-line-top ">
+                        <div class="color-white editContent">
+                            <div class="icon-back"><span class="fa fa-user"></span></div>
+                            <h5><a href="#url" class="editContent">Qualified Staff</a></h5>
+                            <p class="para editContent">
+                                Sit amet consect etur adipi sicing elit. Rem quib usdam corporis,
+                                dolores
+                                quos, nobis culpa est
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="w3l-services-two" id="services">
+        <div class="service-single-page editContent">
+            <div class="container">
+                <div class="service-grids row">
+                    <div class="col-lg-6 ">
+                        <img src="~/images/b1.jpg" alt="product" class="img-responsive about-me">
+                    </div>
+                    <div class="cwp4-text col-lg-6 text-left pl-lg-5 align-self">
+                        <h6 class="small-title">New courses</h6>
+                        <h3>Learning the importance of right courses. </h3>
+                        <p class="para editContent text ">
+                            Moll itia placeat modi expl icabo volup tatum corporis unde Dicta, provident
+                            Rem adipisci Moll itia placeat modi volup tatem tenetur conse quatur.Conseq tenetur conse quatur adipi sicing elit.
+                        </p>
+                        <a href="about.html" class="action-button btn mt-lg-5 mt-4">Read more</a>
+                    </div>
+                </div>
+                <div class="service-grids row pb-0">
+                    <div class="service-grid col-lg-6 text-left pr-lg-5 align-self ">
+                        <h6 class="small-title">Boost Your Skills</h6>
+                        <h3>One of a kind learning opportunities</h3>
+                        <p class="para editContent text ">
+                            Moll itia placeat modi expl icabo volup tatum corporis unde Dicta, provident
+                            Rem adipisci Moll itia placeat modi volup tatem tenetur conse quatur.Conseq tenetur conse quatur adipi sicing elit.
+                        </p>
+                        <a href="about.html" class="action-button btn mt-lg-5 mt-4">Read more</a>
+                    </div>
+                    <div class="cwp4-text col-lg-6 ">
+                        <img src="~/images/b8.jpg" alt="product" class="img-responsive about-me">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="w3l-footer-29-main">
+        <div class="footer-29 py-5 ">
+            <div class="container">
+                <div class="grid-col-4 footer-top-29">
+                    <div class="footer-list-29 footer-1">
+                        <h2 class="footer-title-29">About Us</h2>
+                        <p class="para">Ipsum dolor sit amet, consectetur adipisicing elit. Itaque quis repellendus nesciunt quam cupiditate explicabo modi non error consequatur sunt molestiae laboriosam adipisci voluptatem possimus</p>
+                        <div class="main-social-footer-29">
+                            <a href="#facebook" class="facebook"><span class="fa fa-facebook"></span></a>
+                            <a href="#twitter" class="twitter"><span class="fa fa-twitter"></span></a>
+                            <a href="#instagram" class="instagram"><span class="fa fa-instagram"></span></a>
+                            <a href="#google-plus" class="google-plus"><span class="fa fa-google-plus"></span></a>
+                            <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                        </div>
+                    </div>
+                    <div class="footer-list-29 footer-2">
+                        <ul>
+                            <h6 class="footer-title-29">Latest News</h6>
+                            <li>
+                                <a href="#pages">Programming language</a>
+                                <h5><a href="#pages">by Admin</a></h5>
+                            </li>
+                            <li><a href="#pages">Graduate Admissions</a><h5><a href="#pages">by Admin</a></h5></li>
+                            <li><a href="#pages">Committed to educating</a><h5><a href="#pages">by Admin</a></h5></li>
+                        </ul>
+                    </div>
+                    <div class="footer-list-29 footer-3">
+                        <div class="properties">
+                            <h6 class="footer-title-29">Contact Us</h6>
+
+                            <ul>
+                                <li>
+                                    <p>
+                                        <span class="fa fa-map-marker"></span>California, #32841 block,
+                                        #221DRS 75 West Rock,
+                                        Maple Building, UK.
+                                    </p>
+                                </li>
+                                <li><a href="tel:+7-800-999-800"><span class="fa fa-phone"></span> +(21)-255-999-8888</a></li>
+                                <li><a href="mailto:estate-mail@support.com" class="mail"><span class="fa fa-envelope-open-o"></span> example@mail.com</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="footer-list-29 footer-4">
+                        <ul>
+                            <h6 class="footer-title-29">Useful Links</h6>
+                            <li><a href="#url">Forums</a></li>
+                            <li><a href="#url">Our Teachers</a></li>
+                            <li><a href="#url">Upcoming Events</a></li>
+                            <li><a href="#url">Popular Courses</a></li>
+                            <li><a href="#url">Verified Course</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class=" bottom-copies row">
+                    <p class="copy-footer-29 col-lg-8">© 2020 Tutee. All rights reserved | Designed by <a href="//w3layouts.com">W3layouts</a></p>
+                    <ul class="list-btm-29 col-lg-4">
+                        <li><a href="#link">Privacy policy</a></li>
+                        <li><a href="#link">Terms of service</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+
+</main>
