Check icon style, fix responsive

--- a/FIT5032_MyFirstWebApplication/Views/Home/Index.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Home/Index.cshtml
@@ -1,9 +1,13 @@
 ﻿@{
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+@{
     ViewBag.Title = "Home Page";
 }
 
 <main>
-    <body id="home">        
+    <body id="home">
         <section class="w3l-hero-headers-9" id="home">
             <div class="slide header11" data-selector="header11">
                 <div class="container">
