--- a/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
+++ b/FIT5032_MyFirstWebApplication/Views/Shared/_Layout.cshtml
@@ -7,9 +7,10 @@
         @Styles.Render("~/Content/css")
         @Scripts.Render("~/bundles/modernizr")*@
     <link href="~/css/style-starter.css" rel="stylesheet" />
+    <link href="~/css/icon_style.css" rel="stylesheet" />
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="//fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
-    <a href="~/fonts/fontawesome-webfont.eot"  rel="stylesheet"></a>
+    <a href="~/fonts/fontawesome-webfont.eot" rel="stylesheet"></a>
     <a href="~/fonts/fontawesome-webfont.ttf" rel="stylesheet"></a>
     <a href="~/fonts/fontawesome-webfont.woff" rel="stylesheet"></a>
     <a href="~/fonts/fontawesome-webfont.woff2" rel="stylesheet"></a>
